--- a/h5live-demo/source/wx_live/pages/index/index.wxml
+++ b/h5live-demo/source/wx_live/pages/index/index.wxml
@@ -1,13 +1,5 @@
 <!--index.wxml-->
 <view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+ <!-- src需要替换地址 -->
+  <live-player src="https://vjs.zencdn.net/v/oceans.mp4" mode="live" autoplay bindstatechange="statechange" binderror="error" style="width: 300px; height: 225px;" />
 </view>
